--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,14 @@
     <div class="header-content">
       <h1>Meine Einkaufsliste</h1>
       <span class="header-subtitle">Organisiere deine Einkäufe</span>
+      <div class="theme-toggle">
+        <mat-slide-toggle 
+          [checked]="isDarkTheme" 
+          (change)="toggleTheme()" 
+          color="primary">
+          <mat-icon>{{ isDarkTheme ? 'dark_mode' : 'light_mode' }}</mat-icon>
+        </mat-slide-toggle>
+      </div>
     </div>
   </header>
 
