--- a/src/styles.less
+++ b/src/styles.less
@@ -1,3 +1,5 @@
+@import 'app/presentation/theme/themes.less';
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -18,17 +20,14 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  //background: linear-gradient(135deg, var(--cornflower-blue), var(--persian-indigo)) fixed;
-  background: linear-gradient(135deg, #4f46e5, #9333ea) fixed; // Indigo → Lila
-  //background: linear-gradient(135deg, #6366f1, #ec4899) fixed; // Indigo → Pink
-  //background: linear-gradient(135deg, #0ea5e9, #8b5cf6) fixed; // Blau → Lila
+  background: var(--background);
   background-size: cover;
   color: var(--text-color);
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: background 0.3s ease, color 0.3s ease;
 }
-
 
 button {
   cursor: pointer;
@@ -36,7 +35,7 @@ button {
 }
 
 a {
-  color: var(--accent-color);
+  color: var(--ut-orange);
   text-decoration: none;
 
   &:hover {
@@ -53,7 +52,7 @@ a {
 
 .btn {
   padding: 0.5rem 1rem;
-  background-color: var(--accent-color);
+  background-color: var(--ut-orange);
   color: white;
   border: none;
   border-radius: 4px;
@@ -66,8 +65,8 @@ a {
 
   &.btn-outline {
     background-color: transparent;
-    border: 1px solid var(--accent-color);
-    color: var(--accent-color);
+    border: 1px solid var(--ut-orange);
+    color: var(--ut-orange);
 
     &:hover {
       background-color: rgba(255, 134, 0, 0.1);
