[main] Add new logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="app-container">
   <header class="app-header">
     <div class="header-content">
-      <h1>Meine Einkaufsliste</h1>
-      <span class="header-subtitle">Organisiere deine Einkäufe</span>
+      <div class="logo-container">
+        <img src="assets/duck-logo.png" alt="Logo" class="app-logo">
+      </div>
       <div class="theme-toggle">
         <mat-slide-toggle
           [checked]="isDarkTheme"
