--- a/src/app/presentation/components/category-list/category-list.component.less
+++ b/src/app/presentation/components/category-list/category-list.component.less
@@ -190,9 +190,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 48px 24px;
-  margin: 32px auto;
+  //padding: 48px 24px;
+  padding: 25px 24px;
+  //margin: 32px auto;
+  margin: 15px auto;
   max-width: 600px;
+  min-width: 320px;
   border-radius: 16px;
   box-shadow: var(--card-shadow);
   text-align: center;
